2005-07-28  louburnard  <louburnard@spqr-ibm>

	* Source/SA/joingrp.odd:
	changed desc attribute into child element; disallowed empty element

2005-07-27  louburnard  <louburnard@spqr-ibm>

	* Source/SA/when.odd: remove wooly options on timeline origins

	* Source/SA/sa.odd: make desc attrib on join into a child element

	* Source/SA/join.odd: change desc attribute into child element

	* Source/PH/ph.odd: remove refs to desc attribute on gap

	* Source/CO/co.odd: reorder examples and explain use of desc

	* Source/CO/gap.odd: sort out cvs confusion

	* Source/CO/co.odd: correct example

	* Source/CO/co.odd: chang gap examples to use child desc element

	* Source/MS/explicit.odd: correct gap examples

	* Source/CO/gap.odd: remove desc attribute; add desc child

2005-07-26  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Makefile:
	errors in Makefile for creating fascicule and Lite version of Guidelines

2005-07-25  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/CC/interact.odd: remove surplus word to make grammatical

2005-07-24  Sebastian Rahtz  <rahtz@spqr-ibm>

	* Source/CC/interact.odd, Source/CC/relation.odd, Source/TD/valdesc.odd:
	an element overriding a class attribute datatype with a valList needs
	to supply that in "add" mode. Also add mode attribute to valDesc,
	so that we can alter that if needed.

2005-07-24  louburnard  <louburnard@spqr-ibm>

	* Source/CC/relation.odd:
	added to typed class to test ability to over-ride valList

	* Source/CC/interact.odd:
	experimentally changed to test ability to over-ride type value
	inheritance in odd processors

	* Source/SA/timeline.odd:
	remove suggestion that absolute time can be specified as anything
	other than a time value

2005-07-18  Sebastian Rahtz  <rahtz@spqr-ibm>

	* ChangeLog: update change log

	* Query/sitemap-dist.xmap, Exemplars/Makefile, Makefile, VERSION:
	fix processing to cope with graphics files in ODD chapters. fix path in Query sitemap

2005-07-18  louburnard  <louburnard@spqr-ibm>
