@@ -1,3 +1,11 @@
+2005-08-12  Sebastian Rahtz  <rahtz@spqr-ibm>
+
+	* Makefile, testfrag.rnc: test using schema fragments
+
+2005-08-04  louburnard  <louburnard@spqr-ibm>
+
+	* testms.xml: remove now nonexistent status attribute
+
 2005-07-28  louburnard  <louburnard@spqr-ibm>
 
 	* Source/SA/joingrp.odd:
